frontend up-to date

--- a/app/src/static/css/home.css
+++ b/app/src/static/css/home.css
@@ -132,3 +132,24 @@ body {
   .count-text { font-size: 13px; font-weight: normal;  margin-top: 10px; margin-bottom: 0; text-align: center; }
   .fa-2x { margin: 0 auto; float: none; display: table; color: #4ad1e5; }
   
+
+  
+.wrap{
+    margin-top:70px;
+    margin-left: 320px;
+    color: black;
+}
+
+.cnt{
+    border-radius: 25px;
+    border: 1px solid rgb(6, 6, 150);
+  /* border-color: blue; */
+
+}
+
+.crd{
+    margin-top: 70px;
+    background-image: linear-gradient(to right, #4269b3, #ffffff);
+    color: black;
+
+}
